Ahora se muestran las opciones actuales de la configuracion en el formulario y se actualizaron los colores

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -186,25 +186,25 @@ color: #000;}
 }
 
 .blue{
-  background: #204784;
+  background: #78AED3;
 }
 .red{
-  background: #842020;
+  background: #FF8FAB;
 }
 .green{
-  background: #63a86f;
+  background: #52B2CF;
 }
 
 .background-red {
-  background-color: red;
+  background-color: #E27396;
 }
 
 .background-blue {
-  background-color: blue;
+  background-color: #4F77AA;
 }
 
 .background-green {
-  background-color: #1c5003;
+  background-color: #7EC4CF;
 }
 
 
