--- a/app/templates/user/index.html
+++ b/app/templates/user/index.html
@@ -10,16 +10,16 @@
     <p>Filtrar por nombre y/o activo/desactivado:</p>
     <form action="{{ url_for('user_search') }}" method="post">
       <input type="search" placeholder="Nombre" name="first_name">
-      <select name='activo'>
+      <select class="form-select-sm" name='activo'>
         <option value='1'>Activado</option>
         <option value='0'>Desactivado</option>
       </select>
-      <button type="submit">Filtrar</button>
+      <button class="btn btn-outline-primary btn-sm" type="submit">Filtrar</button>
     </form>
   </div>
   <div class="table-responsive">
 
-    <table class="table table-striped table-border table-sm">
+    <table class="table table-striped table-border table-sm table-hover">
       <tr class="table-light">
         </trclass>
         <th>Email</th>
@@ -72,7 +72,7 @@
       {% endfor %}
     </table>
   </div>
-  <a href="{{ url_for('home') }}" class="link">Volver</a>
-  <a href="{{ url_for('user_new') }}" class="link">Nuevo</a>
+  <a href="{{ url_for('home') }}" class="btn btn-primary mb-2">Volver</a>
+  <a href="{{ url_for('user_new') }}" class="btn btn-primary mb-2">Nuevo</a>
 </div>
 {% endblock %}
