--- a/app/templates/user/new.html
+++ b/app/templates/user/new.html
@@ -10,37 +10,37 @@
   <form class="needs-validation" action="{{ url_for('user_create') }}" method="POST">
     <div class="row">
 
-      <div class="col-sm">
+      <p>
         <label class="form-label" for="email">Email</label></br>
         {% if errors["email"] %}
         <input id="email" value="{{fieldsInfo.email}}" type="email" name="email" placeholder="Correo" required
           style="box-shadow: 0 0 3px #CC0000" />
-        <p style="color:red"> {{errors["email"]}} </p>
-        {% else %}
-        <input id="email" type="email" name="email" placeholder="Correo" required />
-        {% endif %}
-      </div>
+      <p style="color:red"> {{errors["email"]}} </p>
+      {% else %}
+      <input id="email" type="email" name="email" placeholder="Correo" required />
+      {% endif %}
+      </p>
       {% if errors[""] %}
       <p style="color:red"> {{errors[""]}} </p>
       {% else %}
       {% endif %}
-      <div class="mb-3">
+      <p>
         <label class="form-label">Username</label></br>
         {% if errors["username"] %}
         <input value="{{fieldsInfo.username}}" name="username" placeholder="username" required
           style="box-shadow: 0 0 3px #CC0000" />
-        <p style="color:red"> {{errors["username"]}} </p>
-        {% else %}
-        <input name="username" placeholder="username" required />
-        {% endif %}
-      </div>
+      <p style="color:red"> {{errors["username"]}} </p>
+      {% else %}
+      <input name="username" placeholder="username" required />
+      {% endif %}
+      </p>
       <p>
         <label class="form-label">Clave</label></br>
         <input type="password" name="password" placeholder="Clave" required />
       </p>
       <p>
         <label class="form-label">¿Crear usuario activado?</label></br>
-        <select name='activo'>
+        <select class="form-select-sm" name='activo'>
           <option value='0'>Desactivado</option>
           <option value='1'>Activado</option>
         </select>
@@ -62,10 +62,10 @@
         {% endif %}
       </p>
       <p>
-        <input type="submit" value="Crear">
+        <input class="btn btn-outline-dark btn-sm" type="submit" value="Crear">
       </p>
     </div>
   </form>
-  <a href="{{ url_for('user_index') }}" class="link">Volver</a>
+  <a href="{{ url_for('user_index') }}" class="btn btn-primary mb-2">Volver</a>
 </div>
 {% endblock %}
