--- a/app/templates/puntos/index.html
+++ b/app/templates/puntos/index.html
@@ -4,38 +4,51 @@
 {{ super() }}
 {% endblock %}
 {% block content %}
-<h1>Acá van a estar los puntos de encuentro</h1>
-<table>
-  <tr>
-    <th>Nombre</th>
-    <th>Direccion</th>
-    <th>Coordenadas</th>
-    <th>Estado</th>
-    <th>Tefelono</th>
-    <th>Email</th>
-  </tr>
-  {% for punto in puntos.items %}
-  <tr>
-    <td>{{ punto.name }}</td>
-    <td>{{punto.direccion}}</td>
-    <td>{{punto.coordenadas }}</td>
-    {% if punto.estado %}
-    <td>Publicado </td>
-    {% else %}
-    <td>Despublicado</td>
-    {% endif %}
-    <td>{{ punto.telefono }}</td>
-    <td>{{ punto.email }}</td>
-  </tr>
-  {% endfor %}
-</table>
-<div>
-  {% for page_num in puntos.iter_pages() %}
-  {% if page_num %}
-  <a class="link" href="{{ url_for('puntos_index',page=page_num) }}">{{ page_num }}</a>
-  {% endif %}
-  {% endfor %}
+<div class="container text-center">
+  <div class="container mb-2">
+    <h1>Puntos de encuentro</h1>
+  </div>
+  <div class="table-responsive">
+
+    <table class="table table-striped table-border table-sm table-hover">
+      <tr class="table-light">
+        <th>Nombre</th>
+        <th>Direccion</th>
+        <th>Coordenadas</th>
+        <th>Estado</th>
+        <th>Tefelono</th>
+        <th>Email</th>
+      </tr>
+      {% for punto in puntos.items %}
+      <tr class="table-info">
+        <td class="table-info">{{ punto.name }}</td>
+        <td class="table-info">{{punto.direccion}}</td>
+        <td class="table-info">{{punto.coordenadas }}</td>
+        {% if punto.estado %}
+        <td class="table-info">Publicado </td>
+        {% else %}
+        <td class="table-info">Despublicado</td>
+        {% endif %}
+        <td class="table-info">{{ punto.telefono }}</td>
+        <td class="table-info">{{ punto.email }}</td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+  <div>
+    <nav>
+      <ul class="pagination justify-content-center">
+        {% for page_num in puntos.iter_pages() %}
+        {% if page_num %}
+        <li class="pag-item">
+          <a class="page-link" href="{{ url_for('puntos_index',page=page_num) }}">{{ page_num }}</a>
+        </li>
+        {% endif %}
+        {% endfor %}
+      </ul>
+    </nav>
+  </div>
+  <a href="{{ url_for('home') }}" class="btn btn-primary mb-2">Volver</a>
+  <a href="{{ url_for('puntos_new') }}" class="btn btn-primary mb-2">Nuevo</a>
 </div>
-<a href="{{ url_for('home') }}" class="link">Volver</a>
-<a href="{{ url_for('puntos_new') }}" class="link">Nuevo</a>
 {% endblock %}
