--- a/app/templates/user/index.html
+++ b/app/templates/user/index.html
@@ -28,7 +28,7 @@
         <th>apellido</th>
         <th>Estado</th>
       </tr>
-      {% for user in users %}
+      {% for user in users.items %}
       {% if not session["user"]== user.email %}
       <tr class="table-info">
         <td class="table-info">
@@ -72,7 +72,20 @@
       {% endfor %}
     </table>
   </div>
-  <a href="{{ url_for('home') }}" class="btn btn-primary mb-2">Volver</a>
-  <a href="{{ url_for('user_new') }}" class="btn btn-primary mb-2">Nuevo</a>
-</div>
-{% endblock %}
+  <div>
+    <nav>
+      <ul class="pagination justify-content-center">
+        {% for page_num in users.iter_pages() %}
+        {% if page_num %}
+        <li class="pag-item">
+          <a class="page-link" href="{{ url_for('user_index',page=page_num) }}">{{ page_num }}</a>
+        </li>
+        {% endif %}
+        {% endfor %}
+      </ul>
+    </nav>
+
+    <a href="{{ url_for('home') }}" class="btn btn-primary mb-2">Volver</a>
+    <a href="{{ url_for('user_new') }}" class="btn btn-primary mb-2">Nuevo</a>
+  </div>
+  {% endblock %}
