--- a/app/templates/user/new.html
+++ b/app/templates/user/new.html
@@ -16,20 +16,20 @@
         <input id="email" value="{{fieldsInfo.email}}" type="email" name="email" placeholder="Correo" required
           style="box-shadow: 0 0 3px #CC0000" />
       <p style="color:red"> {{errors["email"]}} </p>
+      {% elif errors %}
+      <input value="{{fieldsInfo.email}}" name="email" required />
       {% else %}
       <input id="email" type="email" name="email" placeholder="Correo" required />
       {% endif %}
       </p>
-      {% if errors[""] %}
-      <p style="color:red"> {{errors[""]}} </p>
-      {% else %}
-      {% endif %}
       <p>
         <label class="form-label">Username</label></br>
         {% if errors["username"] %}
         <input value="{{fieldsInfo.username}}" name="username" placeholder="username" required
           style="box-shadow: 0 0 3px #CC0000" />
       <p style="color:red"> {{errors["username"]}} </p>
+      {% elif errors %}
+      <input value="{{fieldsInfo.username}}" name="username" required />
       {% else %}
       <input name="username" placeholder="username" required />
       {% endif %}
