CRUD de puntos de encuentro finalizado

--- a/app/templates/puntos/index.html
+++ b/app/templates/puntos/index.html
@@ -29,31 +29,30 @@
         <th>Estado</th>
         <th>Tefelono</th>
         <th>Email</th>
+        <th>Acciones</th>
       </tr>
       {% for punto in puntos.items %}
       <tr class="table-info">
-        <td class="table-info"><a href="{{ url_for('puntos_edit', id=punto.id)}}">{{ punto.name }}</a></td>
+        <td class="table-info">{{ punto.name }}</a></td>
         <td class="table-info">{{ punto.address }}</td>
         <td class="table-info">{{ punto.latitude }}</td>
         <td class="table-info">{{ punto.longitude }}</td>
         <td class="table-info">
           <form action="{{ url_for('puntos_edit_estado', name=punto.name) }}" method="POST">
             {% if punto.state %}
-            <select name='state'>
-              <option value='1'>Publicado</option>
-              <option value='0'>Oculto</option>
-            </select>
+            Publicado
             {% else %}
-            <select name='state'>
-              <option value='0'>Oculto</option>
-              <option value='1'>Publicado</option>
-            </select>
+            Oculto
             {% endif %}
-            <input type="submit" value="actualizar">
-          </form>
         </td>
         <td class="table-info">{{ punto.telephone }}</td>
         <td class="table-info">{{ punto.email }}</td>
+        <td class="table-info">
+          <a href="{{ url_for('puntos_edit', id=punto.id) }}"><img src="static/images/pencil.png" class="fotito"></a>
+          <a href=" {{ url_for('puntos_delete', id=punto.id) }}"
+            onclick="return confirm('Desea eliminar el punto: {{ punto.name }}? Esta acción no podrá deshacerse');"
+            title="Delete Merchant"><img src="static/images/delete.png" class="fotito"></a>
+        </td>
       </tr>
       {% endfor %}
     </table>
