Se borraron algunas funcionalidades innecesarias y se agregó el límite de elementos por página

--- a/app/templates/configuracion/configuracion.html
+++ b/app/templates/configuracion/configuracion.html
@@ -32,7 +32,7 @@
         </p>
         <p>
             <label>Elementos por página</label>
-            <input value="{{g.config.elementos_por_pagina}}" type="number" name="elementos_por_pagina" required>
+            <input value="{{g.config.elementos_por_pagina}}" type="number" name="elementos_por_pagina" min="1" required>
         </p>
         <p>
             <label>Criterio de ordenación</label><br>
