--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -6,69 +6,121 @@
 {% block content %}
 <div class="container mb-2 text-center rounded-3" style="background-color: rgba(0, 0, 0, 0.1)">
     <h1>Editar información del usuario</h1>
+    <div class="row g-5">
 
-    <form class="needs-validation" action="{{ url_for('user_edit',id=id ) }}" method="POST">
-        <div class="row">
+        <div class="col-md-5 col-lg-4 order-md-last">
+            <h4 class="d-flex justify-content-between align-items-center mb-3">
+                <span class="text">Roles asignados</span>
+            </h4>
+            <ul class="list-group mb-3">
+                <li class="list-group-item d-flex justify-content-between lh-sm">
+                    <div>
+                        <h6 class="my-0">Product name</h6>
+                        <small class="text-muted">Brief description</small>
+                    </div>
+                    <span class="text-muted">$12</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between lh-sm">
+                    <div>
+                        <h6 class="my-0">Second product</h6>
+                        <small class="text-muted">Brief description</small>
+                    </div>
+                    <span class="text-muted">$8</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between lh-sm">
+                    <div>
+                        <h6 class="my-0">Third item</h6>
+                        <small class="text-muted">Brief description</small>
+                    </div>
+                    <span class="text-muted">$5</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between bg-light">
+                    <div class="text-success">
+                        <h6 class="my-0">Promo code</h6>
+                        <small>EXAMPLECODE</small>
+                    </div>
+                    <span class="text-success">−$5</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between">
+                    <span>Total (USD)</span>
+                    <strong>$20</strong>
+                </li>
+            </ul>
 
-            <p>
-                <label class="form-label" for="email">Email</label></br>
-                {% if errors["email"] %}
-                <input id="email" value="{{fieldsInfo.email}}" type="email" name="email" placeholder="Correo" required
-                    style="box-shadow: 0 0 3px #CC0000" />
-            <p style="color:red"> {{errors["email"]}} </p>
-            {% else %}
-            <input id="email" value="{{fieldsInfo.email}}" type="email" name="email" placeholder="Correo" required />
-            {% endif %}
-            </p>
-            {% if errors[""] %}
-            <p style="color:red"> {{errors[""]}} </p>
-            {% else %}
-            {% endif %}
-            <p>
-                <label class="form-label">Username</label></br>
-                {% if errors["username"] %}
-                <input value="{{fieldsInfo.username}}" name="username" placeholder="username" required
-                    style="box-shadow: 0 0 3px #CC0000" />
-            <p style="color:red"> {{errors["username"]}} </p>
-            {% else %}
-            <input value="{{fieldsInfo.username}}" name="username" placeholder="username" required />
-            {% endif %}
-            </p>
-            <p>
-                <label>Cambiar estado de usuario</label></br>
-                {% if fieldsInfo.activo %}
-                <select class="form-select-sm" name='activo'>
-                    <option value='1'>Activado</option>
-                    <option value='0'>Desactivado</option>
-                </select>
-                {% else %}
-                <select class="form-select-sm" name='activo'>
-                    <option value='0'>Desactivado</option>
-                    <option value='1'>Activado</option>
-                </select>
-                {% endif %}
-            </p>
-            <p>
-                <label>Nombre</label></br>
-                {% if errors %}
-                <input value="{{fieldsInfo.first_name}}" name="first_name" placeholder="Nombre" required />
-                {% else %}
-                <input value="{{fieldsInfo.first_name}}" name="first_name" placeholder="Nombre" required />
-                {% endif %}
-            </p>
-            <p>
-                <label>Apellido</label></br>
-                {% if errors %}
-                <input value="{{fieldsInfo.last_name}}" name="last_name" placeholder="Apellido" required />
-                {% else %}
-                <input value="{{fieldsInfo.last_name}}" name="last_name" placeholder="Apellido" required />
-                {% endif %}
-            </p>
-            <p>
-                <input class="btn btn-outline-dark btn-sm" type="submit" value="Actualizar">
-            </p>
+            <form class="card p-2">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Promo code">
+                    <button type="submit" class="btn btn-secondary">Redeem</button>
+                </div>
+            </form>
         </div>
-    </form>
-    <a href="{{ url_for('user_index') }}" class="btn btn-primary mb-2">Volver</a>
+        <div class="col-md-7 col-lg-7">
+
+            <form class="needs-validation" action="{{ url_for('user_edit',id=id ) }}" method="POST">
+                <div class="row">
+
+                    <p>
+                        <label class="form-label" for="email">Email</label></br>
+                        {% if errors["email"] %}
+                        <input id="email" value="{{fieldsInfo.email}}" type="email" name="email" placeholder="Correo"
+                            required style="box-shadow: 0 0 3px #CC0000" />
+                    <p style="color:red"> {{errors["email"]}} </p>
+                    {% else %}
+                    <input id="email" value="{{fieldsInfo.email}}" type="email" name="email" placeholder="Correo"
+                        required />
+                    {% endif %}
+                    </p>
+                    {% if errors[""] %}
+                    <p style="color:red"> {{errors[""]}} </p>
+                    {% else %}
+                    {% endif %}
+                    <p>
+                        <label class="form-label">Username</label></br>
+                        {% if errors["username"] %}
+                        <input value="{{fieldsInfo.username}}" name="username" placeholder="username" required
+                            style="box-shadow: 0 0 3px #CC0000" />
+                    <p style="color:red"> {{errors["username"]}} </p>
+                    {% else %}
+                    <input value="{{fieldsInfo.username}}" name="username" placeholder="username" required />
+                    {% endif %}
+                    </p>
+                    <p>
+                        <label>Cambiar estado de usuario</label></br>
+                        {% if fieldsInfo.activo %}
+                        <select class="form-select-sm" name='activo'>
+                            <option value='1'>Activado</option>
+                            <option value='0'>Desactivado</option>
+                        </select>
+                        {% else %}
+                        <select class="form-select-sm" name='activo'>
+                            <option value='0'>Desactivado</option>
+                            <option value='1'>Activado</option>
+                        </select>
+                        {% endif %}
+                    </p>
+                    <p>
+                        <label>Nombre</label></br>
+                        {% if errors %}
+                        <input value="{{fieldsInfo.first_name}}" name="first_name" placeholder="Nombre" required />
+                        {% else %}
+                        <input value="{{fieldsInfo.first_name}}" name="first_name" placeholder="Nombre" required />
+                        {% endif %}
+                    </p>
+                    <p>
+                        <label>Apellido</label></br>
+                        {% if errors %}
+                        <input value="{{fieldsInfo.last_name}}" name="last_name" placeholder="Apellido" required />
+                        {% else %}
+                        <input value="{{fieldsInfo.last_name}}" name="last_name" placeholder="Apellido" required />
+                        {% endif %}
+                    </p>
+                    <p>
+                        <input class="btn btn-outline-dark btn-sm" type="submit" value="Actualizar">
+                    </p>
+                </div>
+            </form>
+            <a href="{{ url_for('user_index') }}" class="btn btn-primary btn-sm mb-2">Volver</a>
+        </div>
+    </div>
 </div>
 {% endblock %}
