--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -12,45 +12,41 @@
             <h4 class="d-flex justify-content-between align-items-center mb-3">
                 <span class="text">Roles asignados</span>
             </h4>
-            <ul class="list-group mb-3">
-                <li class="list-group-item d-flex justify-content-between lh-sm">
-                    <div>
-                        <h6 class="my-0">Product name</h6>
-                        <small class="text-muted">Brief description</small>
-                    </div>
-                    <span class="text-muted">$12</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between lh-sm">
-                    <div>
-                        <h6 class="my-0">Second product</h6>
-                        <small class="text-muted">Brief description</small>
-                    </div>
-                    <span class="text-muted">$8</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between lh-sm">
-                    <div>
-                        <h6 class="my-0">Third item</h6>
-                        <small class="text-muted">Brief description</small>
-                    </div>
-                    <span class="text-muted">$5</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between bg-light">
-                    <div class="text-success">
-                        <h6 class="my-0">Promo code</h6>
-                        <small>EXAMPLECODE</small>
-                    </div>
-                    <span class="text-success">−$5</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between">
-                    <span>Total (USD)</span>
-                    <strong>$20</strong>
-                </li>
-            </ul>
-
-            <form class="card p-2">
+            <form class="p-2" action="{{ url_for('user_edit_rol', id=id) }}" method="POST">
+                <ul class="list-group mb-3">
+                    {% if rolInfo|selectattr("name", "None") %}
+                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" name="name" value="Moderador" type="checkbox" checked>
+                            <label class="form-check-label">Operador</label>
+                        </div>
+                    </li>
+                    {% else %}
+                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" name="name" value="Moderador" type="checkbox">
+                            <label class="form-check-label">Operador</label>
+                        </div>
+                    </li>
+                    {% endif %}
+                    {% if rolInfo|selectattr("name", "Administrador") %}
+                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" name="name" value="Administrador" type="checkbox" checked>
+                            <label class="form-check-label">Administrador</label>
+                        </div>
+                    </li>
+                    {% else %}
+                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" name="name" value="Administrador" type="checkbox">
+                            <label class="form-check-label">Administrador</label>
+                        </div>
+                    </li>
+                    {% endif %}
+                </ul>
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Promo code">
-                    <button type="submit" class="btn btn-secondary">Redeem</button>
+                    <button type="submit" class="btn btn-secondary">Asignar</button>
                 </div>
             </form>
         </div>
