--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -46,7 +46,7 @@
                     {% endif %}
                 </ul>
                 <div class="input-group">
-                    <button type="submit" class="btn btn-secondary">Asignar</button>
+                    <button type="submit" class="btn btn-outline-dark btn-sm">Asignar</button>
                 </div>
             </form>
         </div>
