--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -7,7 +7,7 @@
 <div class="container mb-2 text-center rounded-3" style="background-color: rgba(0, 0, 0, 0.1)">
     <h1>Editar información del usuario</h1>
     <div class="row g-5">
-
+        {% if has_permission(session, 'user_edit_rol')%}
         <div class="col-md-5 col-lg-4 order-md-last">
             <h4 class="d-flex justify-content-between align-items-center mb-3">
                 <span class="text">Roles asignados</span>
@@ -50,6 +50,7 @@
                 </div>
             </form>
         </div>
+        {% endif %}
         <div class="col-md-7 col-lg-7">
 
             <form class="needs-validation" action="{{ url_for('user_edit',id=id ) }}" method="POST">
