error de merge solucionado

--- a/app/templates/user/index.html
+++ b/app/templates/user/index.html
@@ -52,7 +52,7 @@
           Desactivado
           {% endif %}
         </td>
-        <td class="table-info"><a href="{{ url_for('user_edit', id=user.id) }}"><img src="static/images/pencil.png"
+        <td class="table-info"><a href="{{ url_for('user_edit_info', id=user.id) }}"><img src="static/images/pencil.png"
               class="fotito"></a>
         </td>
       </tr>
