El alta de puntos funciona correctamente, se deben realizar algunos ajustes respecto a los distintos codigos de respuesta

--- a/app/templates/puntos/new.html
+++ b/app/templates/puntos/new.html
@@ -16,45 +16,42 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.10/leaflet.draw.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.10/leaflet.draw.js"></script>
 
+<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+
+
 <script type="module" src="{{ url_for('static', filename='js/index.js') }}"></script>
 {% endblock %}
 {% block content %}
 <div class="container mb-2 text-center rounded-3" style="background-color: rgba(0, 0, 0, 0.1)">
   <h1>Crear un punto de encuentro</h1>
-  <form id="create-punto-form" class="needs-validation" action="{{ url_for('puntos_create') }}" method="POST">
+  <form id="create-punto-form" class="needs-validation" method="post">
     <div class="row">
       <p>
         <label class="form-label">Nombre</label></br>
         {% if errors["name"] %}
-        <input value="{{fieldsInfo.name}}" name="name" placeholder="Nombre" required
+        <input id="name" value="{{fieldsInfo.name}}" name="name" placeholder="Nombre" required
           style="box-shadow: 0 0 3px #CC0000" />
       <p style="color:red"> {{errors["name"]}} </p>
       {% elif errors %}
-      <input value="{{fieldsInfo.name}}" name="name" required />
+      <input id="name" value="{{fieldsInfo.name}}" name="name" id="name" required />
       {% else %}
-      <input name="name" placeholder="Nombre" required />
+      <input id="name" name="name" placeholder="Nombre" required />
       {% endif %}
       </p>
       <p>
         <label class="form-label">Direccion</label></br>
         {% if errors %}
-        <input value="{{fieldsInfo.address}}" name="address" required />
+        <input id="address" value="{{fieldsInfo.address}}" name="address" required />
         {% else %}
-        <input name="address" placeholder="Direccion" required />
+        <input id="address" name="address" placeholder="Direccion" required />
         {% endif %}
-      </p>
-      <p>
-        <input id="latitude" name="latitude" placeholder="Latitud" required />
-      </p>
-      <p>
-        <input id="longitude" name="longitude" placeholder="Longitud" required />
       </p>
       <div id="map">
         <div id="mapid"></div>
       </div>
       <p>
         <label>Estado</label></br>
-        <select class="form-select-sm" name='state'>
+        <select id="state" class="form-select-sm" name='state'>
           <option value='1'>Publicado</option>
           <option value='0'>Oculto</option>
         </select>
@@ -62,9 +59,9 @@
       <p>
         <label class="form-label">Telefono</label></br>
         {% if errors %}
-        <input value="{{fieldsInfo.telephone}}" name="telephone" required />
+        <input id="telephone" value="{{fieldsInfo.telephone}}" name="telephone" required />
         {% else %}
-        <input name="telephone" placeholder="Telefono" required />
+        <input id="telephone" name="telephone" placeholder="Telefono" required />
         {% endif %}
       </p>
       <p>
@@ -78,10 +75,12 @@
       {% endif %}
       </p>
       <p>
-        <input class="btn btn-outline-dark btn-sm" type="submit" value="Crear">
+        <input class="btn btn-outline-dark btn-sm" type="submit" value="Crear" />
       </p>
     </div>
   </form>
   <a href="{{ url_for('puntos_index') }}" class="btn btn-primary mb-2">Volver</a>
 </div>
 {% endblock %}
+
+<!-- class="btn btn-outline-dark btn-sm" -->
