Se cambió la lógica del formulario del alta de puntos

--- a/app/templates/puntos/new.html
+++ b/app/templates/puntos/new.html
@@ -46,6 +46,8 @@
         <input id="address" name="address" placeholder="Direccion" required />
         {% endif %}
       </p>
+
+      <input name="coordinates" type="text" id="latitude" />
       <div id="map">
         <div id="mapid"></div>
       </div>
