Ahora sí ya está todo organizado

--- a/app/templates/puntos/new.html
+++ b/app/templates/puntos/new.html
@@ -47,7 +47,7 @@
         {% endif %}
       </p>
 
-      <input name="coordinates" type="text" id="latitude" />
+      <input name="coordinates" type="text" id="coordinates" />
       <div id="map">
         <div id="mapid"></div>
       </div>
