--- a/app/templates/puntos/edit.html
+++ b/app/templates/puntos/edit.html
@@ -19,7 +19,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
 
-<script type="module" src="{{ url_for('static', filename='js/index.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/punto/index.js') }}"></script>
 {% endblock %}
 {% block content %}
 <div class="container mb-2 text-center rounded-3" style="background-color: rgba(0, 0, 0, 0.1)">
