--- a/app/templates/zonas/index.html
+++ b/app/templates/zonas/index.html
@@ -7,6 +7,9 @@
 <div class="container text-center">
   <div class="container mb-2">
     <h1>Zonas inundables</h1>
+    <form action="">
+      <input type="file" name="zones_file">
+    </form>
     <a href="{{ url_for('home') }}" class="btn btn-primary mb-2">Volver</a>
     <a href="#" class="btn btn-primary mb-2">Nuevo</a>
   </div>
